<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:id="@+id/email_address"
            android:autofillHints="emailAddress"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:id="@+id/send_email"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_site_address"
            android:inputType="textWebEditText"
            android:id="@+id/site_address"
            android:autofillHints="text"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/browse"
            android:id="@+id/site_btn"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:id="@+id/phone_number"
            android:autofillHints="phone"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dial"
            android:id="@+id/dial_btn"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/latitude"
            android:inputType="phone"
            android:id="@+id/lat_et"
            android:autofillHints="number"/>


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/longitude"
            android:inputType="phone"
            android:id="@+id/lon_et"
            android:autofillHints="number"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            android:textAllCaps="false"
            android:id="@+id/map_btn"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_contacts"
        android:id="@+id/contacts_btn"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/latitude"
            android:inputType="phone"
            android:id="@+id/waze_lat_et"
            android:autofillHints="number"/>


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/longitude"
            android:inputType="phone"
            android:id="@+id/waze_lon_et"
            android:autofillHints="number"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/waze"
            android:textAllCaps="false"
            android:id="@+id/waze_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_message"
            android:inputType="textWebEditText"
            android:id="@+id/message_et"
            android:autofillHints="text"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whatsapp"
            android:textAllCaps="false"
            android:id="@+id/whats_btn"/>
    </LinearLayout>
</LinearLayout>